--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,7 @@
 <title>Resume</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -114,13 +115,22 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>Bachelor Degree</p><br>
         </div>
       </div>
+      
 
     <!-- End Right Column -->
     </div>
     
   <!-- End Grid -->
   </div>
-  
+  <div style="text-align: center; margin: 10px;">
+    <h2 class="text-center mt-2 mb-4">Open Positions Where I Work</h2>
+    <div>
+        {% for job in jobs %}
+          {% include 'jobitem.html' %}
+        {% endfor %}
+      </div>
+        <button>Want To Join With Me</button>
+  </div>
   <!-- End Page Container -->
 </div>
 
