--- a/templates/home.html
+++ b/templates/home.html
@@ -25,9 +25,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="https://www.w3schools.com/w3images/avatar_hat.jpg" style="width:100%" alt="Avatar">
+          <img src="/static/image_vhs.png" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
-            <h2>ABC Sharma</h2>
+            <h2>Vishal Sharma</h2>
           </div>
         </div>
         <div class="w3-container">
@@ -75,6 +75,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="w3-twothird">
     
       <div class="w3-container w3-card w3-white w3-margin-bottom">
+        
+        <h4 class="w3-text-grey w3-padding-16">Website Created Using Basic [HTML,CSS,FLASK,Python,Replit,Bootstrap]</h4>
+        
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Front End Developer / something.com</b></h5>
